# Twarog

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  default.nix  shell.nix  stack.yaml  tags  twarog.cabal
app/: Main.hs
src/: Archetypes.hs  Character.hs  Enchantement.hs  Item.hs  Twarog.hs  Types.hs  Units.hs
src/Twarog/: Types.hs
src/Twarog/Backend/: Archetypes.hs  Calendar.hs  Character.hs  CharacterSheet.hs  Enchantement.hs  Enchantment.hs  Encumbrance.hs  Flaws.hs  Gods.hs  Item.hs  Modifier.hs  Races.hs  Rules.hs  SkillMods.hs  Skills.hs  Talents.hs  Types.hs  Units.hs
src/Twarog/Backend/Units/: Capacity.hs  Common.hs  Distance.hs  Time.hs  Value.hs  Weight.hs
src/Twarog/Frontend/: CharGen.hs  DiceGen.hs  HamingjaStore.hs  NameGen.hs
test/: Spec.hs
twarog-web/: Main.hs  Model.hs  Update.hs  View.hs
twarog-web/View/: Attitude.hs  Attributes.hs  Birthday.hs  Buttons.hs  Character.hs  FlawsAndTalents.hs  Menu.hs  Race.hs  Skills.hs
twarog-web/ViewElements/: Attitude.hs  Attributes.hs  Birthday.hs  Buttons.hs  Character.hs  FlawsAndTalents.hs  Menu.hs  Skills.hs
