cabal-version:       2.4

name:                twarog
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            szczerski.pl
-- bug-reports:
license:             GPL-2.0-only
license-file:        LICENSE
author:              Rafał Szczerski
maintainer:          rafal@szczerski.pl
-- copyright:
category:            Game, Web
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/rszczers/Twarog.git

common common-options
  build-depends:       base >= 4.10.1.0 && < 4.14
                     , containers
                     , lens

--  ghc-options:         -Wall
  ghc-options:         -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       InstanceSigs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
                       TypeSynonymInstances
                       FlexibleInstances

executable twarog-web
  import:              common-options
  hs-source-dirs:      twarog-web
  main-is:             Main.hs
  build-depends:       miso
                     , twarog
  if !impl(ghcjs)
    build-depends:     jsaddle
                     , jsaddle-warp
                     , transformers
                     , warp
                     , websockets
  default-language:    Haskell2010

library                                                                        
  import:              common-options
  exposed-modules:     Twarog
  other-modules:       Twarog.Backend.Archetypes
                     , Twarog.Backend.Character
                     , Twarog.Backend.Enchantement
                     , Twarog.Backend.Flaws
                     , Twarog.Backend.Item
                     , Twarog.Backend.Skills
                     , Twarog.Backend.Races
                     , Twarog.Backend.Talents
                     , Twarog.Backend.Types
                     , Twarog.Backend.Units
  -- other-extensions:                                                         
  hs-source-dirs:      src
  default-language:    Haskell2010   

test-suite test
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs 
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       hedgehog, twarog
